Separating react code from html

--- a/R1/index.html
+++ b/R1/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css"/>
     <title>Basic HTML</title>
 </head>
 <body>
@@ -12,13 +13,6 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
-    <script>
-        const heading = React.createElement("h1",{}, "Hi from react");
-        const heading2 = React.createElement("h5",{},"small data");
-        const root = ReactDOM.createRoot(document.getElementById("root"));
-        
-        root.render(heading);
-        root.render(heading2);
-    </script>
+    <script src="./mew.js"></script>
 </body>
 </html>
