--- a/R1/index.html
+++ b/R1/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css"/>
-    <title>Basic HTML</title>
+    <title>Basic HTML2</title>
 </head>
 <body>
     <div id="root"></div>
     
-    
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-    <script src="./mew.js"></script>
+    <script type="module" src="./temp.js"></script>
 </body>
 </html>
